# Pulsar_2.1

./: .gitignore  .gitmodules  CMakeLists.txt  Pulsar_v2.jucer  README.md
.claude/: settings.local.json
.github/workflows/: build-macos-arm64.yml  build-macos-x86_64.yml  build-windows.yml
CMAKE/: SOURCES.cmake  TESTS.cmake
HELPER_SCRIPTS/: build_and_release_workflow.py  build_au.py  build_complete.py  build_installer.py  build_standalone.py  build_tests.py  build_vst3.py  rebuild_all.py  regenSource.py  release_workflow.py  sign_builds.py  sign_installers.py  update_version.py
INSTALLERS/: Pulsar.iss
INSTALLERS/PC/: Pulsar.iss  build_pc_installer.py
SIGNED/: README.md  TODO_mac.md  plugin_info.py  release_workflow_mac.py  release_workflow_pc.py  test_digital_signature_check.py
SIGNED/MAC/: check_if_signed_mac.py
SIGNED/PC/: check_if_signed_pc.py  sign_pc_installer.py  sign_pc_standalone.py  sign_pc_vst3.py
SOURCE/: Database.h  PulsarSynthesiser.h
SOURCE/Components/: AboutComponent.h  DemoComponent.h  EnvelopeVisualizer.cpp  ParameterDictionary.h  PluginEditor.cpp  PluginEditor.h  PresetMenu.h  PulsarControlsComponent.cpp  PulsarControlsComponent.h  PulsarSlider.h  PulsaretVisualizer.h  TutorialImageComponent.h  UserPresetMenu.h
SOURCE/Envelope/: Envelope.cpp
SOURCE/LookNFeel/: NameFeel.h
SOURCE/PULSAR_TRAIN/: PulsarTrain.cpp  PulsarTrain.h
SOURCE/Processor/: PluginProcessor.cpp  PluginProcessor.h  TempoSync.h
SOURCE/Pulsar Train/: PulsarTrain.cpp
SOURCE/Pulsaret/: MidiTransformer.cpp  OwnedPulsaret.cpp  OwnedPulsaret.h  Pulsaret.cpp  PulsaretFactory.cpp  PulsaretFactory.h  PulsaretTable.h  Table.cpp  Table.h
SOURCE/Util/: Version.h
Source/: PulsarSynthesiser.cpp
Source/Components/: BurgerMenuHeader.h  CommandRunnerComponent.h  DemoComponent.h  EnvelopeControlPoint.h  EnvelopeVisualizer.h  PluginEditor.h  PulsarControlsComponent.cpp  PulsarSlider.cpp  PulsaretVisualizer.cpp  ThanksComponent.h  UserPresetMenu.h
Source/Envelope/: Envelope.h
Source/LookNFeel/: MixFeel.cpp  MixFeel.h  NameFeel.cpp  PulsarUIFeel.cpp  PulsarUIFeel.h
Source/Processor/: PluginProcessor.cpp  PluginProcessor.h  TempoSync.cpp
Source/Pulsar Train/: PulsarTrain.h
Source/Pulsaret/: MidiTransformer.h  OwnedPulsaret.cpp  Pulsaret.h  PulsaretFactory.cpp  PulsaretTable.cpp  Table.cpp  Table.h
TESTS/: test_ParameterValues.cpp  test_PluginName.cpp
docs/: windows-code-signing-setup.md
